chore: manifest, icons and styles

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel="manifest" href="manifest.json" />
+		<meta
+			name="description"
+			content="A mega unmatched app to design and create everything related to the board game"
+		/>
+		<meta http-equiv="X-UA-Compatible" content="IE=7" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
