--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<link rel="icon" href="%sveltekit.assets%/images/favicon.png" />
 	<!-- <meta name="viewport" content="width=device-width" /> -->
 	<link rel="manifest" href="/manifest.json" />
 	<meta name="description" content="A mega unmatched app to design and create everything related to the board game" />
